--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,202 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: oklch(0.9890 0.0073 80.7214);
+  --foreground: oklch(0.2433 0.0247 263.9506);
+  --card: oklch(1.0000 0 0);
+  --card-foreground: oklch(0.2433 0.0247 263.9506);
+  --popover: oklch(1.0000 0 0);
+  --popover-foreground: oklch(0.2433 0.0247 263.9506);
+  --primary: oklch(0.8959 0.1601 146.6605);
+  --primary-foreground: oklch(0.2433 0.0247 263.9506);
+  --secondary: oklch(0 0 0);
+  --secondary-foreground: oklch(1.0000 0 0);
+  --muted: oklch(0.9498 0.0272 297.3155);
+  --muted-foreground: oklch(0.4474 0.0343 261.3244);
+  --accent: oklch(0.8770 0.0623 295.2711);
+  --accent-foreground: oklch(0 0 0);
+  --destructive: oklch(0.6137 0.2039 25.5645);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.2433 0.0247 263.9506);
+  --input: oklch(0.2433 0.0247 263.9506);
+  --ring: oklch(0.9359 0.0951 147.7995);
+  --chart-1: oklch(0.9359 0.0951 147.7995);
+  --chart-2: oklch(0.9008 0.1496 99.7140);
+  --chart-3: oklch(0.8770 0.0623 295.2711);
+  --chart-4: oklch(0.8469 0.0852 356.4544);
+  --chart-5: oklch(0.7457 0.0304 254.7208);
+  --sidebar: oklch(1.0000 0 0);
+  --sidebar-foreground: oklch(0.2433 0.0247 263.9506);
+  --sidebar-primary: oklch(0.9359 0.0951 147.7995);
+  --sidebar-primary-foreground: oklch(0.2433 0.0247 263.9506);
+  --sidebar-accent: oklch(0.9359 0.0951 147.7995);
+  --sidebar-accent-foreground: oklch(0.2433 0.0247 263.9506);
+  --sidebar-border: oklch(0.2433 0.0247 263.9506);
+  --sidebar-ring: oklch(0.9359 0.0951 147.7995);
+  --font-sans: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-serif: Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --radius: 0.75rem;
+  --shadow-2xs: 4px 4px 0px 0px hsl(0 0% 0% / 1.00);
+  --shadow-xs: 4px 4px 0px 0px hsl(0 0% 0% / 1.00);
+  --shadow-sm: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 1px 2px -1px hsl(0 0% 0% / 1.00);
+  --shadow: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 1px 2px -1px hsl(0 0% 0% / 1.00);
+  --shadow-md: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 2px 4px -1px hsl(0 0% 0% / 1.00);
+  --shadow-lg: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 4px 6px -1px hsl(0 0% 0% / 1.00);
+  --shadow-xl: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 8px 10px -1px hsl(0 0% 0% / 1.00);
+  --shadow-2xl: 4px 4px 0px 0px hsl(0 0% 0% / 2.50);
+  --tracking-normal: normal;
+  --spacing: 0.25rem;
+  --shadow-color: #000000;
+  --shadow-opacity: 1;
+  --shadow-blur: 0px;
+  --shadow-spread: 0px;
+  --shadow-offset-x: 4px;
+  --shadow-offset-y: 4px;
+  --letter-spacing: normal;
+}
+
+.dark {
+  --background: oklch(0.2433 0.0247 263.9506);
+  --foreground: oklch(0.9834 0.0042 236.4956);
+  --card: oklch(0.3351 0.0331 260.9120);
+  --card-foreground: oklch(0.9834 0.0042 236.4956);
+  --popover: oklch(0.3351 0.0331 260.9120);
+  --popover-foreground: oklch(0.9834 0.0042 236.4956);
+  --primary: oklch(0.9359 0.0951 147.7995);
+  --primary-foreground: oklch(0.2433 0.0247 263.9506);
+  --secondary: oklch(0.9008 0.1496 99.7140);
+  --secondary-foreground: oklch(0.2433 0.0247 263.9506);
+  --muted: oklch(0.4474 0.0343 261.3244);
+  --muted-foreground: oklch(0.7457 0.0304 254.7208);
+  --accent: oklch(0.3351 0.0331 260.9120);
+  --accent-foreground: oklch(0.9834 0.0042 236.4956);
+  --destructive: oklch(0.6137 0.2039 25.5645);
+  --destructive-foreground: oklch(0.9834 0.0042 236.4956);
+  --border: oklch(0.4474 0.0343 261.3244);
+  --input: oklch(0.4474 0.0343 261.3244);
+  --ring: oklch(0.9359 0.0951 147.7995);
+  --chart-1: oklch(0.9359 0.0951 147.7995);
+  --chart-2: oklch(0.9008 0.1496 99.7140);
+  --chart-3: oklch(0.8770 0.0623 295.2711);
+  --chart-4: oklch(0.8469 0.0852 356.4544);
+  --chart-5: oklch(0.7457 0.0304 254.7208);
+  --sidebar: oklch(0.2433 0.0247 263.9506);
+  --sidebar-foreground: oklch(0.9834 0.0042 236.4956);
+  --sidebar-primary: oklch(0.9359 0.0951 147.7995);
+  --sidebar-primary-foreground: oklch(0.2433 0.0247 263.9506);
+  --sidebar-accent: oklch(0.9359 0.0951 147.7995);
+  --sidebar-accent-foreground: oklch(0.2433 0.0247 263.9506);
+  --sidebar-border: oklch(0.4474 0.0343 261.3244);
+  --sidebar-ring: oklch(0.9359 0.0951 147.7995);
+  --font-sans: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-serif: Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --radius: 0.75rem;
+  --shadow-2xs: 4px 4px 0px 0px hsl(0 0% 0% / 0.50);
+  --shadow-xs: 4px 4px 0px 0px hsl(0 0% 0% / 0.50);
+  --shadow-sm: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 1px 2px -1px hsl(0 0% 0% / 1.00);
+  --shadow: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 1px 2px -1px hsl(0 0% 0% / 1.00);
+  --shadow-md: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 2px 4px -1px hsl(0 0% 0% / 1.00);
+  --shadow-lg: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 4px 6px -1px hsl(0 0% 0% / 1.00);
+  --shadow-xl: 4px 4px 0px 0px hsl(0 0% 0% / 1.00), 4px 8px 10px -1px hsl(0 0% 0% / 1.00);
+  --shadow-2xl: 4px 4px 0px 0px hsl(0 0% 0% / 2.50);
+  --shadow-color: #000000;
+  --shadow-opacity: 1;
+  --shadow-blur: 0px;
+  --shadow-spread: 0px;
+  --shadow-offset-x: 4px;
+  --shadow-offset-y: 4px;
+  --letter-spacing: normal;
+  --spacing: 0.25rem;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-sans: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-serif: Georgia, Cambria, "Times New Roman", Times, serif;
+
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
+
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-normal: var(--tracking-normal);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  --radius: 0.75rem;
+  --spacing: var(--spacing);
+  --letter-spacing: var(--letter-spacing);
+  --shadow-offset-y: var(--shadow-offset-y);
+  --shadow-offset-x: var(--shadow-offset-x);
+  --shadow-spread: var(--shadow-spread);
+  --shadow-blur: var(--shadow-blur);
+  --shadow-opacity: var(--shadow-opacity);
+  --color-shadow-color: var(--shadow-color);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: var(--tracking-normal);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+    letter-spacing: var(--tracking-normal);
+  }
+
+  input {
+    @apply border border-black;
+  }
 }
